--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "description": "🗓 Web App para ver los feriados nacionales de Argentina, Chile y Uruguay.",
   "scripts": {
-    "start": "npx serve -p 3030",
+    "dev": "npx serve -p 3030",
     "build": "cp -rf ./dev/js ./src/"
   },
   "license": "MIT",
